
graphicsdir = $(pkgdatadir)/graphics
junglejdir = $(pkgdatadir)/graphics/junglej
crumbledir = $(pkgdatadir)/graphics/crumble
frenziedir = $(pkgdatadir)/graphics/frenzie
moltenmdir = $(pkgdatadir)/graphics/moltenm
skyscradir = $(pkgdatadir)/graphics/skyscra
menuitemsdir = $(pkgdatadir)/graphics/menuitems


dist_graphics_DATA = \
	antiGrav.bmp \
	backtomain.bmp \
	branch.bmp \
	bubbles.bmp \
	ceilingSpikes.bmp \
	clock.bmp \
	conveyorleft.bmp \
	conveyorright.bmp \
	evilBranch.bmp \
	fall.bmp \
	fallLeft.bmp \
	fallRight.bmp \
	flipper.bmp \
	gameCompleteScreen.bmp \
	heal.bmp \
	healthEmpty.bmp \
	healthFull.bmp \
	idle.bmp \
	instructions.bmp \
	instructions2.bmp \
	jetpackMonkey.bmp \
	jetpackPickup.bmp \
	jumpPickup.bmp \
	jungleJitters \
	laser.bmp \
	loading.bmp \
	locked.bmp \
	log.bmp \
	logo.bmp \
	medal.bmp \
	monkeyIdle.bmp \
	need.bmp \
	needComplete.bmp \
	next.bmp \
	numbers.bmp \
	off.bmp \
	on.bmp \
	paraBag.bmp \
	parachute.bmp \
	paused.bmp \
	pipe.bmp \
	piranha.bmp \
	prev.bmp \
	primateplunged.bmp \
	record.bmp \
	rustSpikes.bmp \
	shield.bmp \
	silver.bmp \
	spikeRock.bmp \
	springRope.bmp \
	star.bmp \
	starRating1Screen.bmp \
	starRating2Screen.bmp \
	starRating3Screen.bmp \
	starRating4Screen.bmp \
	starRating5Screen.bmp \
	swingLeft.bmp \
	swingRight.bmp \
	taskBarIcon.bmp \
	whale.bmp \
	WindowsThankYou.bmp \
	worldunlocked.bmp


dist_junglej_DATA = \
	junglej/backTrees.bmp \
	junglej/background.bmp \
	junglej/frame.bmp \
	junglej/sideTrunks.bmp \
	junglej/vines.bmp


dist_crumble_DATA = \
	crumble/frame.bmp \
	crumble/largeBackground.bmp \
	crumble/medRocks.bmp \
	crumble/nearRocks.bmp

dist_frenzie_DATA = \
	frenzie/background.bmp \
	frenzie/cliff.bmp \
	frenzie/frame.bmp \
	frenzie/waterBack.bmp \
	frenzie/waterFront.bmp

dist_moltenm_DATA = \
	moltenm/background.bmp \
	moltenm/distant.bmp \
	moltenm/frame.bmp \
	moltenm/hotRocks.bmp \
	moltenm/middleRocks.bmp \
	moltenm/normal.bmp \
	moltenm/rockFallApart.bmp \
	moltenm/sides.bmp \
	moltenm/veryHotPlatform.bmp

dist_skyscra_DATA = \
	skyscra/background.bmp \
	skyscra/frame.bmp \
	skyscra/pipesBack.bmp \
	skyscra/pipesFore.bmp \
	skyscra/pipesMid.bmp \
	skyscra/rain.bmp

dist_menuitems_DATA = \
	menuitems/back-menuitem.bmp \
	menuitems/back-over-menuitem.bmp \
	menuitems/cancel-menuitem.bmp \
	menuitems/cancel-over-menuitem.bmp \
	menuitems/instructions-menuitem.bmp \
	menuitems/instructions-over-menuitem.bmp \
	menuitems/music-menuitem.bmp \
	menuitems/music-over-menuitem.bmp \
	menuitems/newgame-menuitem.bmp \
	menuitems/newgame-over-menuitem.bmp \
	menuitems/options-menuitem.bmp \
	menuitems/options-over-menuitem.bmp \
	menuitems/quit-menuitem.bmp \
	menuitems/quit-over-menuitem.bmp \
	menuitems/reset-menuitem.bmp \
	menuitems/reset-over-menuitem.bmp \
	menuitems/sound-menuitem.bmp \
	menuitems/sound-over-menuitem.bmp \
	menuitems/sure-reset.bmp \
	menuitems/yes-menuitem.bmp \
	menuitems/yes-over-menuitem.bmp

