
soundsdir = $(pkgdatadir)/sounds
sounds_DATA = \
	AmbienceJungle.wav \
	AmbienceRain.wav \
	AmbienceUnderwater.wav \
	AmbienceVolcano.wav \
	AmbienceWaterFall.wav \
	AmbienceWind.wav \
	BreakingRock.wav \
	BreakingTree.wav \
	BurningMonkeyHands.wav \
	BurningMonkeyHandsEvenMore.wav \
	CongratsEnding.wav \
	Congratulations.wav \
	gameMusic.wav \
	GetJewel.wav \
	InterfaceSelect.wav \
	JetPack.wav \
	land1.wav \
	land2.wav \
	LandingOnSpikes.wav \
	LandMetal.wav \
	MonkeyAh4.wav \
	MonkeyBigHit1.wav \
	MonkeyBigHit2.wav \
	MonkeyBigHit3.wav \
	MonkeyDeath2.wav \
	MonkeySmallHit1.wav \
	MonkeySmallHit2.wav \
	MonkeySmallHit3.wav \
	Parachute.wav \
	Piranha.wav \
	PowerUpBean.wav \
	PowerUpHealth.wav \
	PowerUpJet.wav \
	PowerUpParachute.wav \
	StarRating.wav \
	timeUp.wav \
	titleMusic.mid
